# BPA

./: .gitignore  README.md  genRelease.sh  index.html  make.sh  params.json  regenerate.sh  view.sh
config/: config
src/: Ball.cpp  Ball.h  CMakeLists.txt  Config.cpp  Config.h  CudaUtil.cu  CudaUtil.h  Edge.cpp  Edge.h  Front.cpp  Front.h  GpuAlgorithms.cu  GpuAlgorithms.h  GpuRoutines.cu  GpuRoutines.h  GpuStructs.h  GpuUtils.h  Helper.cpp  Helper.h  Pivoter.cpp  Pivoter.h  Triangle.cpp  Triangle.h  Writer.cpp  Writer.h  main.cpp
